welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:4: error: ';' expected but '{' found.
} while(!sortieTrouvee()) {
                          ^