welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var n=0 // Nombre de biscuits dans le couloir
do {
  crossing()
} while(!sortieTrouvee()) {
  avance()
  if(estSurBiscuit()){
    n=n+1}
} if (n>=3){
  gauche()
  n=0
} else if (n<=2){
  droite()
  n=0
}
avance()